# ToyRL

./: .buildinfo  .gitignore  =2.3.0  =7.0  =9.0.0  LICENSE  Makefile  README.md  RobotEnv.py  agent.py  algorithm_diagram.excalidraw  config.py  dqn.ipynb  example_run.py  frame.excalidraw  genindex.html  index.html  inference.py  mkdocs.yml  model.py  object.py  pool.py  py-modindex.html  pygame_env.py  pyproject.toml  requirements.txt  robot_env.py  search.html  searchindex.js  test.ipynb  train.py
.github/workflows/: ci.yml  docs.yml
_modules/: index.html
_modules/toyrl/algorithms/: advanced_pg.html  dqn.html  policy_gradient.html  sac.html
_sources/: index.rst.txt
_sources/api/: toyrl.common.logger.rst.txt  toyrl.common.replay_buffer.rst.txt  toyrl.common.utils.rst.txt
algorithms/: advanced_pg.py  dqn.py  policy_gradient.py  sac.py
api/: toyrl.algorithms.advanced_pg.html  toyrl.algorithms.dqn.html  toyrl.algorithms.html  toyrl.algorithms.policy_gradient.html  toyrl.algorithms.sac.html  toyrl.common.env_wrappers.html  toyrl.common.gif_wrapper.html  toyrl.common.html  toyrl.common.logger.html  toyrl.common.networks.html  toyrl.common.replay_buffer.html  toyrl.common.utils.html
common/: env_wrappers.py  gif_wrapper.py  logger.py
configs/: inference.yaml  trainer.yaml
configs/algorithm/: a2c.yaml  a3c.yaml  actor_critic.yaml  double_dqn.yaml  dqn.yaml  dueling_double_dqn.yaml  dueling_dqn.yaml  ppo.yaml  reinforce.yaml  sac.yaml  trpo.yaml
configs/env/: atari.yaml
docs/: conf.py
docs/api/: toyrl.algorithms.advanced_pg.rst  toyrl.algorithms.dqn.rst  toyrl.algorithms.policy_gradient.rst  toyrl.algorithms.rst  toyrl.common.gif_wrapper.rst  toyrl.common.logger.rst  toyrl.common.rst  toyrl.common.utils.rst
logs/: dqn_metrics.npy
runs/dqn_20250722_190701/: events.out.tfevents.1753211221.cursor.2290.0
runs/dqn_20250722_190724/: events.out.tfevents.1753211244.cursor.2379.0
runs/dqn_20250722_190831/: events.out.tfevents.1753211311.cursor.2544.0
runs/ppo_20250722_190724/: events.out.tfevents.1753211244.cursor.2379.1
src/toyrl/: __init__.py
tests/: test_algorithms.py  test_hydra_tensorboard.py
(+77 files in other folders)
