[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toyrl"
version = "0.1.0.dev0"
description = "A comprehensive implementation of classic deep reinforcement learning algorithms"
readme = "README.md"
license = "MIT"
authors = [
    {name = "ToyRL Contributors", email = "toyrl@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=1.13.0",
    "torchvision>=0.14.0",
    "numpy>=1.21.0",
    "gymnasium[atari]>=0.29.0",
    "ale-py>=0.8.0",
    "opencv-python>=4.7.0",
    "matplotlib>=3.5.0",
    "tensorboard>=2.10.0",
    "tqdm>=4.64.0",
    "scipy>=1.9.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "pillow>=9.0.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "sphinx-autobuild",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "myst-parser",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]
mkdocs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/toyrl"
Documentation = "https://yourusername.github.io/toyrl"
Repository = "https://github.com/yourusername/toyrl"
Issues = "https://github.com/yourusername/toyrl/issues"



[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
toyrl = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true